# Code

./: README.md
CMPT276/GeoQuiz/app/: build.gradle
CMPT276/Sudoku/: README.md  local.properties
CMPT276/Sudoku/app/: build.gradle
CMPT300/assign1/assign1_part1/: 1-Pointers.txt  2-Debugging.txt  3-Enhancements.txt  main  main.c
CMPT300/assign1/assign1_part2/: README.txt  shell  shell.c
CMPT300/assign2/assign2_part1/: README.txt  enzyme  enzyme.c
CMPT300/assign2/assign2_part2/: calc  calc.c
CMPT300/assign3/assign3_part1/: sched_impl.c  sched_impl.h  scheduler
CMPT300/assign3/assign3_part2/: scheduler  scheduler.c  worker.c
CMPT300/assign4/assign4_part1/: .cproject  .project  Makefile  README.txt  answers.txt  bonnie.c  fileio.c  lmp1  lmp1_tests.c
CMPT310/A0/: EvenOdd.py  FarmersIncome.py  Grocery.csv  ShoppingCost.py
CMPT310/A1/: search.py  searchAgents.py
CMPT310/A2/: DPLLsat.py
CMPT310/A3/: a3_template.py  reference_posterior.txt  small.out  small_posteri_output.txt
CMPT310/A4/: layers.py  neural_network.py  prime_net_weights_20191205-192920.pkl  simple_net_weights_20200131-002154.pkl  test_neural_network.py
CMPT310/A4/__MACOSX/: ._layers.py
CMPT454/a2/: Bucket.cpp  Bucket.h  ExtensibleHashTable.cpp  ExtensibleHashTable.h  main.cpp  test
CMPT473/A1/googletest-exercise/test/: AwardsTests.cpp  CMakeLists.txt  HailstoneTests.cpp  TriangleTests.cpp
CMPT473/A2/ACTS3.0/: ReleaseNotesR3.0.txt
CMPT473/A2/json-to-csv-master/: README.md  pom.xml
CMPT474/cmpt474-bookclub-master/: .gitignore  env.ps1  env.sh  requirements.txt
(+130 files in other folders)
